tests/ui/cve_2020_35888_simplified/cve_2020_35888_simplified.stderr
error: Possibly dropping an uninitialized value
  --> tests/ui/cve_2020_35888_simplified/cve_2020_35888_simplified.rs:18:9
   |
LL |         (*ptr) = DropDetector(12345);
   |         ^^^^^^ dropped here
   |
   = note: `#[deny(rpl::drop_uninit_value)]` on by default

error: aborting due to 1 previous error

